# docs_template

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  SEARCH_IMPLEMENTATION.md  SERVER_BUILD_FIX.md  deploy.sh  setup_server.sh  webhook-server.service
docs/: Makefile  README.md  README_CN.md  SEARCH.md  build_dist.sh  conf_common.py  requirements.txt  server.js
docs/_build/en/generic/: sphinx-warning-log-sanitized.txt  sphinx-warning-log.txt
docs/_build/en/generic/doctrees/: 404.doctree  about.doctree  environment.pickle  index.doctree  languages.doctree
docs/_build/en/generic/doctrees/api-guides/: features-example.doctree  (+1 more)
docs/_build/en/generic/html/: .buildinfo  404.html  about.html  genindex.html  index.html  languages.html  searchindex.js
docs/_build/zh_CN/generic/: sphinx-warning-log-sanitized.txt  sphinx-warning-log.txt
docs/_build/zh_CN/generic/doctrees/: 404.doctree  about.doctree  environment.pickle  index.doctree  languages.doctree
docs/_build/zh_CN/generic/html/: .buildinfo  404.html  about.html  genindex.html  index.html  languages.html  search.html  searchindex.js
docs/_static/js/: chinese_splitter.js  language_switcher.js
docs/en/: Makefile  conf.py  index.rst  languages.rst
docs/en/_build/en/generic/: sphinx-warning-log.txt
docs/en/_build/zh_CN/generic/: sphinx-warning-log-sanitized.txt
docs/en/get-started/: 404.rst
docs/zh_CN/: Makefile  about.rst  conf.py  languages.rst
webhook-server/: Cargo.toml  README.md  install.sh  webhook-server.service
webhook-server/.cargo/: config.toml
webhook-server/src/: main.rs
(+65 files in other folders)
